# anyinput

./: .gitignore  Cargo.toml  README.md  useful.md
.github/workflows/: ci.yml
anyinput-core/: Cargo.toml  README.md
anyinput-core/src/: lib.rs  tests.rs
anyinput-derive/: Cargo.toml  README.md
anyinput-derive/src/: lib.rs
anyinput-helper/: Cargo.toml
anyinput-helper/src/: lib.rs
input-like-derive/: Cargo.toml
input-like-derive/src/: lib.rs
input-like-helper/: Cargo.toml
input-like-helper/src/: lib.rs
src/: lib.rs
tests/: basic.rs  integration_test.rs  testing.rs  tests_api.rs
tests/ui/: anyarray.rs  anyarray.stderr  anyiter.stderr  anyiter_paren.rs  anyiter_paren.stderr  anyiterconst.rs  anyiterconst.stderr  anyitertwo.rs  anyitertwo.stderr  anyndarray.rs  anyndarray.stderr  anypath.rs  anypath.stderr  anystring.rs  anystring.stderr  args.rs  args.stderr  misapply.rs  misapply.stderr
