[package]
version = "0.1.5"
name = "anyinput"
description = "A macro for easier writing of functions that accept any string-, path-, iterator-, array-, or ndarray-like input"
repository = "https://github.com/CarlKCarlK/anyinput"
readme = "README.md"
documentation = "https://docs.rs/fetch-data/latest/anyinput/"
authors = ["Carl Kadie"]
exclude = []
license = "MIT OR Apache-2.0"
keywords = ["macros", "function", "generics", "ndarray", "iterator"]
categories = ["development-tools", "rust-patterns"]
homepage = "https://github.com/CarlKCarlK/anyinput"
edition = "2021"


[workspace]
members = ["anyinput-derive", "anyinput-core"]

[lib]

[features]
ndarray = ["anyinput-derive/ndarray"]

[dev-dependencies]
anyhow = "1.0"
ndarray = { version = "0.15" }

[dependencies]
anyinput-derive = { version = "0.1.5", path = "anyinput-derive" }
