[package]
version = "0.1.7"
name = "anyinput"
description = "A macro for easier writing of functions that accept any string-, path-, iterator-, array-, or ndarray-like input"
repository = "https://github.com/CarlKCarlK/anyinput"
readme = "README.md"
documentation = "https://docs.rs/anyinput/latest/anyinput/"
authors = ["Carl Kadie"]
exclude = []
license = "MIT OR Apache-2.0"
keywords = ["macros", "function", "generics", "ndarray", "iterator"]
categories = ["development-tools", "rust-patterns"]
homepage = "https://github.com/CarlKCarlK/anyinput"
edition = "2021"

[lib]

[features]
ndarray = ["anyinput-derive/ndarray"]

[workspace]
members = ["anyinput-derive", "anyinput-core"]

[dev-dependencies]
anyhow = "1.0.92"
ndarray = { version = "0.16.1" }
trybuild = "1.0.101"

[dependencies]
anyinput-derive = { version = "0.1.6", path = "anyinput-derive" }
