[package]
name = "anyinput-core"
description = "An internal helper library of anyinput"
repository = "https://github.com/CarlKCarlK/anyinput"
readme = "README.md"
documentation = "https://docs.rs/anyinput/latest/anyinput/"
authors = ["Carl Kadie"]
exclude = []
license = "MIT OR Apache-2.0"
keywords = ["macros", "function", "generics", "ndarray", "iterator"]
categories = ["development-tools", "rust-patterns"]
homepage = "https://github.com/CarlKCarlK/anyinput"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[features]
ndarray = ["dep:ndarray"]


[dev-dependencies]
colored-diff = "0.2.3"
anyhow = "1.0"

[dependencies]
syn = { version = "2.0.87", features = ["extra-traits", "full", "fold"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"
strum = { version = "0.26", features = ["derive"] }
ndarray = { version = "0.16.1", optional = true }
proc-macro-error = "1.0"
