[package]
version = "0.1.4"
name = "anyinput-derive"
description = "A macro for easier writing of functions that accept any string-, path-, iterator-, array-, or ndarray-like input."
repository = "https://github.com/CarlKCarlK/anyinput"
readme = "README.md"
documentation = "https://docs.rs/fetch-data/latest/anyinput/"
authors = ["Carl Kadie"]
exclude = []
license = "MIT OR Apache-2.0"
keywords = ["macros", "function", "generics", "ndarray", "iterator"]
categories = ["development-tools", "rust-patterns"]
homepage = "https://github.com/CarlKCarlK/anyinput"
edition = "2021"

[lib]
proc-macro = true

[features]
ndarray = ["anyinput-core/ndarray"]

[dependencies]
anyinput-core = { version = "0.1.4", path = "../anyinput-core" }
