[package]
name = "anyinput-derive"
version = "0.1.8"
description = "An internal helper library of anyinput"
repository = "https://github.com/CarlKCarlK/anyinput"
readme = "README.md"
documentation = "https://docs.rs/anyinput/latest/anyinput/"
authors = ["Carl Kadie"]
exclude = []
license = "MIT OR Apache-2.0"
keywords = ["macros", "function", "generics", "ndarray", "iterator"]
categories = ["development-tools", "rust-patterns"]
homepage = "https://github.com/CarlKCarlK/anyinput"
edition = "2021"

[lib]
proc-macro = true

[features]
ndarray = ["anyinput-core/ndarray"]

[dependencies]
anyinput-core = { version = "0.1.8", path = "../anyinput-core" }
proc-macro-error = "1.0"
proc-macro2 = "1.0"
