[package]
name = "input-like-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
input-like-helper = { path = "../input-like-helper" }
proc-macro2 = "1.0.24"
quote = "1.0.9"
# cmk are all features needed?
syn = { version = "1.0.60", features = [
    "extra-traits",
    "full",
    "fold",
    "derive",
] }
